# serializer version: 1
# name: test_deblur_model_best_32
  ImageModelDescriptor(
    architecture=M3SNetArch(
      id='M3SNet',
      name='M3SNet',
    ),
    input_channels=3,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=16, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '32w',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_deblur_model_best_64
  ImageModelDescriptor(
    architecture=M3SNetArch(
      id='M3SNet',
      name='M3SNet',
    ),
    input_channels=3,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=16, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '64w',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
